fix: update font size in globals.css and clean up scrollbar styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@ body {
   overflow-y: auto;
   padding: 10px;
   font-family: "Consolas", monospace;
-  font-size: 15px;
+  font-size: 16px;
   color: #cccccc;
   line-height: 1.4;
 }
@@ -54,7 +54,6 @@ body {
   flex: 1;
 }
 
-/* Scrollbar-ის მინიმალური სტილი */
 .terminal-body::-webkit-scrollbar {
   width: 10px;
 }
@@ -62,12 +61,6 @@ body {
 .terminal-body::-webkit-scrollbar-thumb {
   background: #444;
 }
-
-.terminal-body::-webkit-scrollbar-thumb:hover {
-
-  cursor: pointer;
-}
-
-.lalaland {
-  color: #0c0c0c0c
+.lalaland{
+  color: #0c0c0c;
 }
